crates/escalier_parser/src/snapshots/escalier_parser__tests__destructuring-3.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let {p0: {x, y}, p1: {x, y}} = line;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 36,
                    },
                },
                span: 0..36,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 28,
                        },
                    },
                    span: 4..28,
                    kind: Object(
                        ObjectPat {
                            props: [
                                KeyValue(
                                    KeyValuePatProp {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 15,
                                            },
                                        },
                                        span: 5..15,
                                        key: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 7,
                                                },
                                            },
                                            span: 5..7,
                                            name: "p0",
                                        },
                                        value: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 9,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 15,
                                                },
                                            },
                                            span: 9..15,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 10,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 11,
                                                                    },
                                                                },
                                                                span: 10..11,
                                                                ident: BindingIdent {
                                                                    name: "x",
                                                                    mutable: false,
                                                                    span: 10..11,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 10,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 11,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 13,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 14,
                                                                    },
                                                                },
                                                                span: 13..14,
                                                                ident: BindingIdent {
                                                                    name: "y",
                                                                    mutable: false,
                                                                    span: 13..14,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 13,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 14,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        init: None,
                                    },
                                ),
                                KeyValue(
                                    KeyValuePatProp {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 17,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 27,
                                            },
                                        },
                                        span: 17..27,
                                        key: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 19,
                                                },
                                            },
                                            span: 17..19,
                                            name: "p1",
                                        },
                                        value: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 27,
                                                },
                                            },
                                            span: 21..27,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 22,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 23,
                                                                    },
                                                                },
                                                                span: 22..23,
                                                                ident: BindingIdent {
                                                                    name: "x",
                                                                    mutable: false,
                                                                    span: 22..23,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 22,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 23,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 25,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 26,
                                                                    },
                                                                },
                                                                span: 25..26,
                                                                ident: BindingIdent {
                                                                    name: "y",
                                                                    mutable: false,
                                                                    span: 25..26,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 25,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 26,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        init: None,
                                    },
                                ),
                            ],
                            optional: false,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 31,
                            },
                            end: Position {
                                line: 0,
                                column: 35,
                            },
                        },
                        span: 31..35,
                        kind: Ident(
                            Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 31,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 35,
                                    },
                                },
                                span: 31..35,
                                name: "line",
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
